--- a/assistant4IOS/Base.lproj/Main.storyboard
+++ b/assistant4IOS/Base.lproj/Main.storyboard
@@ -80,7 +80,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XAL-Wf-yVu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2132" y="388"/>
+            <point key="canvasLocation" x="2131" y="388"/>
         </scene>
         <!--Daily Add View Controller-->
         <scene sceneID="QJf-dh-obQ">
@@ -102,21 +102,41 @@
                             </label>
                             <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RvG-1E-XSN">
                                 <rect key="frame" x="0.0" y="120" width="414" height="216"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="FCH-mx-Y8Y" id="ib3-FG-iji"/>
+                                    <outlet property="delegate" destination="FCH-mx-Y8Y" id="Z8m-Qb-Ljs"/>
+                                </connections>
                             </pickerView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="正文内容" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a26-lJ-el8">
+                                <rect key="frame" x="0.0" y="344" width="414" height="40"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="TE0-zV-9VH">
+                                <rect key="frame" x="0.0" y="392" width="414" height="170"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
+                    <connections>
+                        <outlet property="contextTextView" destination="TE0-zV-9VH" id="SES-T0-oUr"/>
+                        <outlet property="typePicker" destination="RvG-1E-XSN" id="9Di-KX-WQg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F4v-Se-NNX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2653" y="388"/>
         </scene>
-        <!--Item-->
+        <!--日程记录-->
         <scene sceneID="jxY-SX-w7l">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="eue-2b-elA" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="K9h-j9-doN"/>
+                    <tabBarItem key="tabBarItem" title="日程记录" id="K9h-j9-doN"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="2ro-bU-vyv">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -131,6 +151,41 @@
             </objects>
             <point key="canvasLocation" x="1320" y="388"/>
         </scene>
+        <!--一个-->
+        <scene sceneID="FZg-Uf-cpC">
+            <objects>
+                <viewController id="9A0-rY-IxZ" customClass="OneViewController" customModule="assistant4IOS" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="UpD-oD-krC"/>
+                        <viewControllerLayoutGuide type="bottom" id="VXU-wq-Edv"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="gKI-5R-q8a">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Kwn-CM-Bsd">
+                                <rect key="frame" x="0.0" y="326" width="414" height="90"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pBQ-Is-PMB">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="318"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="一个" id="QX1-C6-EbS"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
+                    <connections>
+                        <outlet property="oneImage" destination="pBQ-Is-PMB" id="ZjS-jM-uf6"/>
+                        <outlet property="oneText" destination="Kwn-CM-Bsd" id="hWS-ez-sHc"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HE1-Vi-F7c" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1227" y="1221"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="wGz-ZE-hpq">
             <objects>
@@ -141,6 +196,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
+                        <segue destination="9A0-rY-IxZ" kind="relationship" relationship="viewControllers" id="emi-eO-gIc"/>
                         <segue destination="eue-2b-elA" kind="relationship" relationship="viewControllers" id="y1X-qA-ih2"/>
                     </connections>
                 </tabBarController>
